small adjustments to css and materialize layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="nav-extended">
-        
+
         <div>
             <img class="brand-logo"
                 src="./assets/photos/Bookies Bank Img.svg - Personal - Microsoft​ Edge 9_26_2023 10_19_42 PM.png " />
@@ -20,6 +20,7 @@
             <p id="logo-text">Bookies Bank</p>
         </div>
         <div class="nav-content">
+
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a href="#test1">NBA</a></li>
                 <li class="tab"><a class="active" href="#test2">NFL</a></li>
@@ -32,10 +33,19 @@
         </div>
     </nav>
 
-    <div class="row">
-        <div class="col s5 push-s6"><span class="flow-text">This div is 7-columns wide on pushed to the right by
-                5-columns.</span></div>
-        <div class="col s5 pull-s5"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
+    <div class="container" id="main-panel">
+        <div class="row ">
+            <div class="col s5 push-s6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto fugiat aliquam voluptates
+                    quibusdam similique non adipisci recusandae natus, quae totam nam numquam commodi ullam quos porro
+                    nemo. Architecto, laudantium voluptates?</p>
+            </div>
+            <div class="col s5 pull-s5">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dignissimos expedita quaerat et!
+                    Distinctio perferendis consequuntur odio ab fuga quidem molestias? Labore sit tenetur autem, maiores
+                    laborum ut molestias id.</p>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
