added comments for the other devs

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
+    <!-- container that wraps the whole page -->
     <div class="container">
+        <!-- nav bar/header -->
         <nav class="nav-extended">
-
+            <!-- logo and logo text -->
             <div>
                 <img class="brand-logo"
                     src="./assets/photos/Bookies Bank Img.svg - Personal - Microsoft​ Edge 9_26_2023 10_19_42 PM.png " />
@@ -22,6 +24,7 @@
             </div>
             <div class="nav-content">
                 <div class="nav-wrapper">
+                    <!-- nav bar tabs -->
                     <ul class="tabs tabs-transparent">
                         <li class="tab"><a href="#test1">Basketball</a></li>
                         <li class="tab"><a class="active" href="#test2">American Football</a></li>
@@ -33,11 +36,12 @@
 
                     </ul>
                 </div>
+                <!-- search bar  -->
                 <form id="search-area">
                     <div class="input-field">
                         <input id="search" type="search" required>
                         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                        
+
                     </div>
                 </form>
             </div>
@@ -49,6 +53,7 @@
                 <!-- left side bar -->
                 <h1>Leagues</h1>
                 <div id="side-bar-btns" class="col s12 m6 l1 ">
+                    <!-- league buttons that are on the left side of the page -->
                     <button class="waves-effect waves-light btn side-btns" href="">NBA</button>
                     <button class="waves-effect waves-light btn side-btns" href="">NFL</button>
                     <button class="waves-effect waves-light btn side-btns" href="">NHL</button>
@@ -63,6 +68,7 @@
             <div class="col s12 m8 l9">
                 <!-- main content middle -->
                 <h2 col s12 id="main-section-nav-bar">
+                    <!-- btns that are in the top middle of the page -->
                     <button class="waves-effect waves-light btn main-btns" href="">All</button>
                     <button class="waves-effect waves-light btn main-btns" href="">Live</button>
                     <button class="waves-effect waves-light btn main-btns" href="">Odds</button>
@@ -71,6 +77,7 @@
                 </h2>
                 <div col s12 m8 l9>
                     <!-- generate game content here using js-->
+
                     <!-- filer content for what will most likley be cards that hold each game and the info on them -->
                     <div id="game-area">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
