fixed button layout

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
                 <p id="logo-text">Bookies Bank</p>
             </div>
-            <div class="nav-content">
+            <div class="nav-content col s12 m4 l3">
                 <div class="nav-wrapper">
                     <!-- nav bar tabs -->
                     <ul class="tabs tabs-transparent">
                         <li class="tab"><a href="#test1">Basketball</a></li>
-                        <li class="tab"><a class="active" href="#test2">American Football</a></li>
-                        <li class="tab disabled"><a href="#test3">Hockey</a></li>
+                        <li class="tab"><a href="#test2">American Football</a></li>
+                        <li class="tab"><a href="#test3">Hockey</a></li>
                         <li class="tab"><a href="#test4">College Football</a></li>
                         <li class="tab"><a href="#test5">Golf</a></li>
                         <li class="tab"><a href="#test6">BaseBall</a></li>
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
                 <!-- search bar  -->
-                <form id="search-area">
+                <form id="search-area" class="col ">
                     <div class="input-field">
                         <input id="search" type="search" required>
                         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
