--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
                 <p id="logo-text">Bookies Bank</p>
             </div>
-            <div class="nav-content col s12 m4 l3">
+            <div id="#nav-bar-items" class="nav-content col s12 m12 l3">
                 <div class="nav-wrapper">
                     <!-- nav bar tabs -->
-                    <ul class="tabs tabs-transparent">
+                    <ul class="tabs tabs-transparent left hide-on-small-and-down">
                         <li class="tab"><a href="#test1">Basketball</a></li>
                         <li class="tab"><a href="#test2">American Football</a></li>
                         <li class="tab"><a href="#test3">Hockey</a></li>
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
                 <!-- search bar  -->
-                <form id="search-area" class="col ">
+                <form id="search-area" class="col s1">
                     <div class="input-field">
                         <input id="search" type="search" required>
                         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
@@ -46,6 +46,7 @@
                 </form>
             </div>
         </nav>
+
 
         <div class="row">
 
