--- a/index.html
+++ b/index.html
@@ -12,141 +12,145 @@
 
 <body>
     <!-- container that wraps the whole page -->
-    <div class="container">
-        <!-- nav bar/header -->
-        <nav class="nav-extended">
-            <!-- logo and logo text -->
-            <div>
-                <img class="brand-logo"
-                    src="./assets/photos/Bookies Bank Img.svg - Personal - Microsoft​ Edge 9_26_2023 10_19_42 PM.png " />
 
-                <p id="logo-text">Bookies Bank</p>
+    <!-- nav bar/header -->
+    <nav class="nav-extended">
+        <!-- logo and logo text -->
+        <div>
+            <img class="brand-logo"
+                src="./assets/photos/Bookies Bank Img.svg - Personal - Microsoft​ Edge 9_26_2023 10_19_42 PM.png " />
+
+            <p id="logo-text">Bookies Bank</p>
+        </div>
+        <div id="#nav-bar-items" class="nav-content col s12 m12 l3">
+            <div class="nav-wrapper">
+                <!-- nav bar tabs -->
+                <ul class="tabs tabs-transparent left hide-on-small-and-down">
+                    <li class="tab btn-large nav-buttons"><a href="#test1">Basketball</a></li>
+                    <li class="tab btn-large nav-buttons"><a href="#test2">American Football</a></li>
+                    <li class="tab btn-large nav-buttons"><a href="#test3">Hockey</a></li>
+                    <li class="tab btn-large nav-buttons"><a href="#test4">College Football</a></li>
+                    <li class="tab btn-large nav-buttons"><a href="#test5">Golf</a></li>
+                    <li class="tab btn-large nav-buttons"><a href="#test6">BaseBall</a></li>
+                    <li class="tab btn-large nav-buttons"><a href="#test7">Soccer</a></li>
+
+                </ul>
             </div>
-            <div id="#nav-bar-items" class="nav-content col s12 m12 l3">
-                <div class="nav-wrapper">
-                    <!-- nav bar tabs -->
-                    <ul class="tabs tabs-transparent left hide-on-small-and-down">
-                        <li class="tab"><a href="#test1">Basketball</a></li>
-                        <li class="tab"><a href="#test2">American Football</a></li>
-                        <li class="tab"><a href="#test3">Hockey</a></li>
-                        <li class="tab"><a href="#test4">College Football</a></li>
-                        <li class="tab"><a href="#test5">Golf</a></li>
-                        <li class="tab"><a href="#test6">BaseBall</a></li>
-                        <li class="tab"><a href="#test7">Soccer</a></li>
-
+            <!-- search bar  -->
+            <form id="search-area">
+                <div class="input-field">
+                    <ul>
+                        <li><a class="btn-floating btn-large cyan pulse" href="sass.html"><i
+                                    class="material-icons">search</i></a></li>
                     </ul>
-                </div>
-                <!-- search bar  -->
-                <form id="search-area" class="col s1">
-                    <div class="input-field">
-                        <input id="search" type="search" required>
-                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
 
-                    </div>
-                </form>
-            </div>
-        </nav>
-
-
-        <div class="row">
-
-            <div id="side-bar" class="col s12 m4 l3">
-                <!-- left side bar -->
-                <h1>Leagues</h1>
-                <div id="side-bar-btns" class="col s12 m6 l1 ">
-                    <!-- league buttons that are on the left side of the page -->
-                    <button class="waves-effect waves-light btn side-btns" href="">NBA</button>
-                    <button class="waves-effect waves-light btn side-btns" href="">NFL</button>
-                    <button class="waves-effect waves-light btn side-btns" href="">NHL</button>
-                    <button class="waves-effect waves-light btn side-btns" href="">MLB</button>
-                    <button class="waves-effect waves-light btn side-btns" href="">PGA</button>
-                    <button class="waves-effect waves-light btn side-btns" href="">MSL</button>
-                    <button class="waves-effect waves-light btn side-btns" href="">NCAA</button>
 
                 </div>
-            </div>
+            </form>
+        </div>
+    </nav>
 
-            <div class="col s12 m8 l9">
-                <!-- main content middle -->
-                <h2 col s12 id="main-section-nav-bar">
-                    <!-- btns that are in the top middle of the page -->
-                    <button class="waves-effect waves-light btn main-btns" href="">All</button>
-                    <button class="waves-effect waves-light btn main-btns" href="">Live</button>
-                    <button class="waves-effect waves-light btn main-btns" href="">Odds</button>
-                    <button class="waves-effect waves-light btn main-btns" href="">Scheduled</button>
 
-                </h2>
-                <div col s12 m8 l9>
-                    <!-- generate game content here using js-->
 
-                    <!-- filer content for what will most likley be cards that hold each game and the info on them -->
-                    <div id="game-area">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
-                            possimus
-                            repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
-                            aliquam?
-                            Quisquam, eveniet obcaecati.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
-                            laboriosam
-                            accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
-                            consequatur
-                            beatae maxime! Maxime suscipit iusto praesentium!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
-                            vel,
-                            neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
-                            at,
-                            quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
-                            expedita
-                            nulla sequi sit!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
-                            possimus
-                            repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
-                            aliquam?
-                            Quisquam, eveniet obcaecati.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
-                            laboriosam
-                            accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
-                            consequatur
-                            beatae maxime! Maxime suscipit iusto praesentium!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
-                            vel,
-                            neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
-                            at,
-                            quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
-                            expedita
-                            nulla sequi sit!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
-                            possimus
-                            repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
-                            aliquam?
-                            Quisquam, eveniet obcaecati.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
-                            laboriosam
-                            accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
-                            consequatur
-                            beatae maxime! Maxime suscipit iusto praesentium!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
-                            vel,
-                            neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
-                            at,
-                            quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
-                            expedita
-                            nulla sequi sit!</p>
-                    </div>
+    <div class="row">
 
-                </div>
+        <div id="side-bar" class="col s12 m4 l3">
+            <!-- left side bar -->
+            <h1>Leagues</h1>
+            <div id="side-bar-btns" class="col s12 m6 l1 ">
+                <!-- league buttons that are on the left side of the page -->
+                <button class="waves-effect waves-light btn side-btns" href="">NBA</button>
+                <button class="waves-effect waves-light btn side-btns" href="">NFL</button>
+                <button class="waves-effect waves-light btn side-btns" href="">NHL</button>
+                <button class="waves-effect waves-light btn side-btns" href="">MLB</button>
+                <button class="waves-effect waves-light btn side-btns" href="">PGA</button>
+                <button class="waves-effect waves-light btn side-btns" href="">MSL</button>
+                <button class="waves-effect waves-light btn side-btns" href="">NCAA</button>
 
             </div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="./assets/js/script.js"></script>
+        <div class="col s12 m8 l9">
+            <!-- main content middle -->
+            <h2 col s12 id="main-section-nav-bar">
+                <!-- btns that are in the top middle of the page -->
+                <button class="waves-effect waves-light btn main-btns" href="">All</button>
+                <button class="waves-effect waves-light btn main-btns" href="">Live</button>
+                <button class="waves-effect waves-light btn main-btns" href="">Odds</button>
+                <button class="waves-effect waves-light btn main-btns" href="">Scheduled</button>
+
+            </h2>
+            <div col s12 m8 l9>
+                <!-- generate game content here using js-->
+
+                <!-- filer content for what will most likley be cards that hold each game and the info on them -->
+                <div id="game-area">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
+                        possimus
+                        repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
+                        aliquam?
+                        Quisquam, eveniet obcaecati.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
+                        laboriosam
+                        accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
+                        consequatur
+                        beatae maxime! Maxime suscipit iusto praesentium!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
+                        vel,
+                        neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
+                        at,
+                        quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
+                        expedita
+                        nulla sequi sit!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
+                        possimus
+                        repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
+                        aliquam?
+                        Quisquam, eveniet obcaecati.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
+                        laboriosam
+                        accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
+                        consequatur
+                        beatae maxime! Maxime suscipit iusto praesentium!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
+                        vel,
+                        neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
+                        at,
+                        quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
+                        expedita
+                        nulla sequi sit!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
+                        possimus
+                        repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
+                        aliquam?
+                        Quisquam, eveniet obcaecati.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
+                        laboriosam
+                        accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
+                        consequatur
+                        beatae maxime! Maxime suscipit iusto praesentium!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
+                        vel,
+                        neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
+                        at,
+                        quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
+                        expedita
+                        nulla sequi sit!</p>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
