--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 <span aria-hidden="true"></span>
             </a>
         </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
+        
+   
+        <div id="navbarBasicExample" class="navbar-menu is-active">
 
             <a class="navbar-item">
                 Basketball
