added container around main content

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
     </nav>
-
+    <div class="container">
     <div class="columns">
         <div id="side-bar" class="column is-3">
             <!-- left side bar -->
@@ -180,6 +180,7 @@
     </div>
     </div>
     </div>
+</div>
 
     <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
     <script src="./assets/js/script.js"></script>
