added an event listener for the search bar that allows the user to search for teams

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     <form id="search-area ">
                         <div class="field has-addons">
                             <div class="control">
-                                <input class="input" type="text" placeholder="Search">
+                                <input id="search-bar" class="input" type="text" placeholder="Search">
                             </div>
                             <div class="control">
-                                <button class="button is-primary" type="submit">
+                                <button id="search-btn" class="button is-primary" type="submit">
                                     <i class="fas fa-search"></i>
                                 </button>
                             </div>
