updated js to show the api calls and data in the correct format and endpoints inside of the console, as well as updated the html and css layout of the page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <span aria-hidden="true"></span>
             </a>
         </div>
-        
-   
+
+
         <div id="navbarBasicExample" class="navbar-menu is-active">
 
             <a class="navbar-item">
@@ -44,7 +44,7 @@
             <a class="navbar-item">
                 Soccer
             </a>
-            
+
             <a class="navbar-item">
                 Golf
             </a>
@@ -61,6 +61,22 @@
             <!-- search bar -->
             <div class="navbar-end ">
                 <div class="navbar-item ">
+
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+
+    </nav>
+    <div class="container">
+        <div class="columns">
+            <div id="side-bar" class="column is-3">
+                <!-- left side bar -->
+                <h1>NFL TEAM SEARCH</h1>
+                <div id="side-bar-btns">
+                    <!-- league buttons that are on the left side of the page -->
                     <form id="search-area ">
                         <div class="field has-addons">
                             <div class="control">
@@ -75,112 +91,48 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </nav>
 
+            <div id="main-area" class="column is-9">
+                <!-- main content middle -->
+                <h2 id="main-section-nav-bar">
+                    <!-- btns that are in the top middle of the page -->
+                    <button class="button is-link main-btns">All</button>
+                    <button class="button is-link main-btns">Live</button>
+                    <button class="button is-link main-btns">Odds</button>
+                    <button class="button is-link main-btns">Scheduled</button>
+                </h2>
+                <div>
+                    <!-- generate game content here using js-->
 
+                    <!-- filter content for what will most likely be cards that hold each game and the info on them -->
 
-    </nav>
-    <div class="container">
-    <div class="columns">
-        <div id="side-bar" class="column is-3">
-            <!-- left side bar -->
-            <h1>Leagues</h1>
-            <div id="side-bar-btns">
-                <!-- league buttons that are on the left side of the page -->
-                <button class="button is-link side-btns">NBA</button>
-                <button class="button is-link side-btns">NFL</button>
-                <button class="button is-link side-btns">NHL</button>
-                <button class="button is-link side-btns">MLB</button>
-                <button class="button is-link side-btns">PGA</button>
-                <button class="button is-link side-btns">MSL</button>
-                <button class="button is-link side-btns">NCAA</button>
-            </div>
-        </div>
+                    <!-- Game content goes here -->
 
-        <div id="main-area" class="column is-9">
-            <!-- main content middle -->
-            <h2 id="main-section-nav-bar">
-                <!-- btns that are in the top middle of the page -->
-                <button class="button is-link main-btns">All</button>
-                <button class="button is-link main-btns">Live</button>
-                <button class="button is-link main-btns">Odds</button>
-                <button class="button is-link main-btns">Scheduled</button>
-            </h2>
-            <div>
-                <!-- generate game content here using js-->
+                    <!-- filer content for what will most likley be cards that hold each game and the info on them -->
+                    <div id="game-area" class="m-3 is-size-5">
+                        <div class="columns">
+                            <div class="column team ml-4">Teams</div>
 
-                <!-- filter content for what will most likely be cards that hold each game and the info on them -->
+                            <div class="column has-text-centered">Odds</div>
+                        </div>
+                        <div class="container-fluid has-border has-background-light">
+                            <div class="columns">
+                                <div class="column team ml-4">Eagles</div>
 
-                <!-- Game content goes here -->
+                                <div class="column has-text-centered">-2.40</div>
+                            </div>
+                            <div class="columns">
+                                <div class="column team ml-4">Eagles</div>
 
-                <!-- filer content for what will most likley be cards that hold each game and the info on them -->
-                <div id="game-area">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
-                        possimus
-                        repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
-                        aliquam?
-                        Quisquam, eveniet obcaecati.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
-                        laboriosam
-                        accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
-                        consequatur
-                        beatae maxime! Maxime suscipit iusto praesentium!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
-                        vel,
-                        neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
-                        at,
-                        quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
-                        expedita
-                        nulla sequi sit!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
-                        possimus
-                        repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
-                        aliquam?
-                        Quisquam, eveniet obcaecati.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
-                        laboriosam
-                        accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
-                        consequatur
-                        beatae maxime! Maxime suscipit iusto praesentium!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
-                        vel,
-                        neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
-                        at,
-                        quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
-                        expedita
-                        nulla sequi sit!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, doloribus porro? Pariatur sit
-                        possimus
-                        repellendus at natus maiores, voluptas blanditiis illum doloremque quos ex ad obcaecati
-                        aliquam?
-                        Quisquam, eveniet obcaecati.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur iste, veniam
-                        laboriosam
-                        accusantium debitis provident dolorem aperiam explicabo architecto sequi, sint autem,
-                        consequatur
-                        beatae maxime! Maxime suscipit iusto praesentium!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic enim at optio mollitia
-                        vel,
-                        neque deleniti? Saepe quis labore aliquam nihil. Atque id sit explicabo fugit at iusto fuga.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam itaque saepe minus esse,
-                        at,
-                        quisquam recusandae ducimus ullam accusantium unde quod nihil eveniet maxime sed assumenda
-                        expedita
-                        nulla sequi sit!</p>
+                                <div class="column has-text-centered">-2.40</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
     </div>
-    </div>
-</div>
 
     <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
     <script src="./assets/js/script.js"></script>
